[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Map_Parts/MP-45-Mario-Move-Plat.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Map_Parts/MP-45-Mario-Move_Plat.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 4 )

[sub_resource type="CapsuleShape2D" id=2]
height = 40.0

[node name="MP-45-Mario-Move-Plat" type="Node2D"]
script = ExtResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 20
collision_mask = 655382

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -6 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
